@@ -1,3 +1,14 @@
+2002-08-31 19:54  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/path.m (DPSrectfill::::): Calculate alpha pointer
+	correctly when clipped.
+
+	* Source/art/composite.m (-compositeGState:fromRect:toPoint:op:):
+	Fix detection of horizontal-only overlap (order==2), and handling
+	it in the general case.
+
+	* Source/blit.m: Whitespace cleanups.
+
 2002-08-31 15:52  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/image.m: Implement clipping of images using the
